<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navis_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aden.mckinney10@gmail.com">aden-mckinney</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Core ROS Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>gpio_controllers</depend>
  <depend>robot_state_publisher</depend>

  <!-- Custom Message package -->
  <build_depend>navis_msgs</build_depend>
  <exec_depend>navis_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
